--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             <div class="container">
                 <div class="d-flex align-items-center justi-space-between card-pt-52">
                     <div class="d-flex flex-direction-column">
-                        <img src="./assets/images/webp/card-image.png" alt="">
+                        <img src="./assets/images/webp/card-image.png" alt="" class="images-width">
                         <h2 class="card-heading-franzos">Franzos</h2>
                         <h2 class="card-paragraph">Restuarant Re-branding</h2>
                     </div>
                     <div class="d-flex flex-direction-column">
-                        <img src="./assets/images/webp/card-image-2.png" alt="">
+                        <img src="./assets/images/webp/card-image-2.png" alt="" class="images-width">
                         <h2 class="card-heading-franzos">Duronic</h2>
                         <h2 class="card-paragraph">Restuarant Re-branding</h2>
                     </div>
@@ -84,12 +84,12 @@
                 <!-- afsdf -->
                 <div class="d-flex align-items-center align-basline justi-space-between card-pt-52">
                     <div class="d-flex flex-direction-column">
-                        <img src="./assets/images/webp/card-image-3.png" alt="">
+                        <img src="./assets/images/webp/card-image-3.png" alt="" class="images-width">
                         <h2 class="card-heading-franzos">SK FOODS BRANDING</h2>
                         <h2 class="card-paragraph">Restuarant Re-branding</h2>
                     </div>
                     <div class="d-flex flex-direction-column">
-                        <img src="./assets/images/webp/card-image-4.png" alt="">
+                        <img src="./assets/images/webp/card-image-4.png" alt="" class="images-width">
                         <h2 class="card-heading-franzos">STATION CARS ENFIELD</h2>
                         <h2 class="card-paragraph">Restuarant Re-branding</h2>
                     </div>
